--- a/seyon/pom.xml
+++ b/seyon/pom.xml
@@ -71,14 +71,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.6</version>
+			<!-- <version>6.0.6</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
