--- a/seyon/src/main/resources/application.properties
+++ b/seyon/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-server.port=8020
-
 logging.level.org.springframework.data=DEBUG
 logging.level.io.seyon=DEBUG
 
 # Datasource
-spring.datasource.url=jdbc:h2:tcp://localhost:9092/~/seyon;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/seyon
+spring.datasource.username=seyon
+spring.datasource.password=pass
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -19,6 +18,8 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 seyon.api.auth-exclude-url=/api/company/createCompany,/api/user/resetpassword
 seyon.api.error-code-mapping.java.lang.IllegalArgumentException= 401
